--- a/public/pendingUsers.ejs
+++ b/public/pendingUsers.ejs
@@ -36,7 +36,7 @@
           <td>
             <%=res.DNA %>
           </td>
-          <td><img src="<%= `${res.image_url}` %>" width="50" height="50" alt="NFT"></td>
+          <td><img src="<%= `${res.image}` %>" width="50" height="50" alt="NFT"></td>
           <td>
             <%= res.social_media %>
           </td>
